tiniest trace of semantics

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="box">
+  <main class="box">
     <h1 class="name">
       Sonny Darvishzadeh
       <span>// Frontend Developer</span>
@@ -138,7 +138,7 @@
         </a>
       </span>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
