--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
   <meta content="Sonny Darvishzadeh's Portfolio" name="description" />
+  <link type="text/css" rel="preload" as="style" href="./styles.css" />
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
   <title>Sonny Darvishzadeh // Frontend Developer</title>
