--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
       </a>
     </div>
   </main>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+  </script>
 </body>
 
 </html>
