add manifest, pwa related

--- a/offline.html
+++ b/offline.html
@@ -7,6 +7,8 @@
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
   <meta content="Sonny Darvishzadeh's Portfolio" name="description" />
+
+  <link rel="manifest" href="./manifest.webmanifest" />
   
   <style>
     body {
