meta theme-color tag

--- a/offline.html
+++ b/offline.html
@@ -7,6 +7,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
   <meta content="Sonny Darvishzadeh's Portfolio" name="description" />
+  <meta content="#000000" name="theme-color" />
 
   <link rel="manifest" href="./manifest.webmanifest" />
   
