add pwa apple icon link tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta content="#000000" name="theme-color" />
 
   <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="./images/sonny-192.png" />
+  
   <link type="text/css" rel="preload" as="style" href="./styles.css" />
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
