--- a/offline.html
+++ b/offline.html
@@ -10,6 +10,7 @@
   <meta content="#000000" name="theme-color" />
 
   <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="./images/sonny-192.png" />
   
   <style>
     body {
