expand the timeline! why user has to click anything at all? 💢

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <br />
 
-    <details class="work-timeline-wrapper">
+    <details class="work-timeline-wrapper" open>
       <summary class="work-timeline-label link">Work Timeline</summary>
       <dl class="work-timeline-list">
         <dt>
