--- a/offline.html
+++ b/offline.html
@@ -284,6 +284,10 @@
         padding: initial;
       }
 
+      .name span {
+        font-size: 24px;
+      }
+
       .work-timeline-list {
         padding: 20px 10px 20px 30px;
       }
