--- a/offline.html
+++ b/offline.html
@@ -368,14 +368,14 @@
   }
   </style>
 
-  <title>Sonny Darvishzadeh // Frontend Developer</title>
+  <title>Sonny Darvishzadeh // UX Frontend Developer</title>
 </head>
 
 <body>
   <main class="box">
     <h1 class="name">
       Sonny Darvishzadeh
-      <span>// Frontend Developer</span>
+      <span>// UX Frontend Developer</span>
     </h1>
     <div class="phone_email">
       <span class="item">
@@ -470,7 +470,7 @@
     </details>
 
     <div class="social_links">
-      <a class="icon" download href="./resume-darvishzadeh-05092020.pdf">
+      <a class="icon" download href="./resume-darvishzadeh-01112020.pdf">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">
           <path
             d="M1596 380q28 28 48 76t20 88v1152q0 40-28 68t-68 28H224q-40 0-68-28t-28-68V96q0-40 28-68t68-28h896q40 0 88 20t76 48zm-444-244v376h376q-10-29-22-41l-313-313q-12-12-41-22zm384 1528V640h-416q-40 0-68-28t-28-68V128H256v1536h1280zM512 800q0-14 9-23t23-9h704q14 0 23 9t9 23v64q0 14-9 23t-23 9H544q-14 0-23-9t-9-23v-64zm736 224q14 0 23 9t9 23v64q0 14-9 23t-23 9H544q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704zm0 256q14 0 23 9t9 23v64q0 14-9 23t-23 9H544q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704z" />
