--- a/index.html
+++ b/index.html
@@ -47,24 +47,21 @@
       <dl class="work-timeline-list">
         <dt>
           <a
-            href="https://www.simscale.com"
+            href="https://tennis-point.com"
             rel="nofollow noopener"
+            data-work-period="2020.10 - now"
+          >Tennis-Point</a>
+        </dt>
+        <dt>
+          <a
             data-work-period="2020.03 - 2020.07"
           >SimScale</a>
         </dt>
-        <dd>
-          React / Redux, Testing, etc.
-        </dd>
         <dt>
           <a
-            href="https://magicplan.app"
-            rel="nofollow noopener"
             data-work-period="2019.10 - 2020.02"
           >magicplan</a>
         </dt>
-        <dd>
-          Vue / Vuex, SCSS, etc.
-        </dd>
         <dt>
           <a
             href="https://pepper.com"
