add context text and reach info

--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
   <main class="box">
     <h1 class="name">
       Sonny Darvishzadeh
-      <span>// UX Frontend Developer</span>
     </h1>
+    <h2 class="role">
+      UX Frontend Developer and Consultant
+    </h2>
+
+    <div class="about-me">
+      <p>
+        An experienced website developer and a great focus on accessibility, user experience, performance and creating meaningful and purposeful products.
+      </p>
+      <p>For business enquiries, feel free to email me or reach out on social media.</p>
+    </div>
+
+    <br />
+
     <div class="phone_email">
       <span class="item">
         <svg style="margin-right: 8px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">
@@ -42,7 +54,7 @@
 
     <br />
 
-    <details class="work-timeline-wrapper" open>
+    <details class="work-timeline-wrapper">
       <summary class="work-timeline-label link">Work Timeline</summary>
       <dl class="work-timeline-list">
         <dt>
