--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link type="text/css" rel="preload" as="style" href="./styles.css" />
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
-  <title>Sonny Darvishzadeh // UX Frontend Developer</title>
+  <title>Sonny Darvishzadeh // Developer and Consultant</title>
 </head>
 
 <body>
@@ -24,12 +24,12 @@
       Sonny Darvishzadeh
     </h1>
     <h2 class="role">
-      UX Frontend Developer and Consultant
+      Frontend Developer and Consultant
     </h2>
 
     <div class="about-me">
       <p>
-        An experienced website developer and a great focus on accessibility, user experience, performance and creating meaningful and purposeful products.
+        A passionate developer with great interests in website performance, accessibility and user experience.
       </p>
       <p>For business enquiries, feel free to email me or reach out on social media.</p>
     </div>
@@ -96,8 +96,6 @@
         </dd>
         <dt>
           <a
-            href="http://goodpeople.my"
-            rel="nofollow noopener"
             data-work-period="2015.6 - 2016.8"
           >GoodPeopleCo</a>
         </dt>
@@ -106,8 +104,6 @@
         </dd>
         <dt>
           <a
-            href="http://dbycreative.net"
-            rel="nofollow noopener"
             data-work-period="2011.5 - 2012.5"
           >DarkBrown &amp; Yellow</a>
         </dt>
@@ -116,7 +112,7 @@
           CSS
         </dd>
         <dt>
-          <a data-work-period="2004 - 2008">Learn / Teach / Freelance <small>(see resume)</small></a>
+          <a data-work-period="2003 - 2008">Learn / Teach / Freelance <small>(see resume)</small></a>
         </dt>
         <dd>
           Participated in <a href="https://worldskills.org/skills/id/127/" rel="nofollow noopener">WorldSkills.org</a>
@@ -124,6 +120,8 @@
         </dd>
       </dl>
     </details>
+
+    <br />
 
     <div class="social_links">
       <a class="icon" download href="./resume-darvishzadeh-01112020.pdf">
