--- a/offline.html
+++ b/offline.html
@@ -27,6 +27,7 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background: white;
     color: black;
+    overflow-y: scroll;
   }
 
   a,
@@ -60,7 +61,17 @@
     max-width: 840px;
     background-color: whitesmoke;
     padding: 15px 35px 35px 35px;
-    border-radius: 3px;
+    border: 5px solid black
+  }
+
+  .name {
+    color: DarkGray;
+    margin-block-end: 0;
+  }
+
+  .role {
+    color: dimgrey;
+    display: inline-block;
   }
 
   summary::-webkit-details-marker {
@@ -186,16 +197,6 @@
     font-size: 0.95em;
   }
 
-  .name {
-    color: #333;
-    margin-block-end: 0;
-  }
-
-  .role {
-    color: #adadad;
-    display: inline-block;
-  }
-
   .phone_email {
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -256,7 +257,7 @@
   @media (prefers-color-scheme: dark) {
     body {
       color: white;
-      background: black;
+      background: #222;
     }
 
     a {
@@ -264,8 +265,9 @@
     }
 
     .box {
-      background-color: #232323;
+      background-color: #333;
       color: #ccc;
+      border-color: Gray;
     }
 
     .box p {
@@ -273,8 +275,11 @@
     }
 
     .name {
-      background-color: #232323;
-      color: #ccc;
+      color: Gray;
+    }
+
+    .role {
+      color: silver;
     }
 
     .phone_email .item {
@@ -293,16 +298,16 @@
     }
 
     .work-timeline-label {
-      background-color: #111;
+      background-color: #222;
     }
 
     .work-timeline-list {
-      background-color: #111;
+      background-color: #222;
       color: silver;
     }
 
     .work-timeline-list a {
-      background-color: #111;
+      background-color: #222;
       color: #ccaa00;
     }
 
@@ -312,7 +317,7 @@
 
     dt::before {
       color: dimgrey;
-      text-shadow: 0px 2px 0px #111, 0px -2px 0px #111;
+      text-shadow: 0px 2px 0px #222, 0px -2px 0px #222;
     }
 
     .work-timeline-list::before {
