update TP end date

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a
             href="https://tennis-point.com"
             rel="nofollow noopener"
-            data-work-period="2020.10 - now"
+            data-work-period="2020.10 - 2021.12"
           >Tennis-Point</a>
         </dt>
         <dt>
