adding the html content too

--- a/index.html
+++ b/index.html
@@ -59,8 +59,16 @@
       <dl class="work-timeline-list">
         <dt>
           <a
-            href="https://tennis-point.com"
+            href="https://jobrad.org"
             rel="nofollow noopener"
+            data-work-period="2022.04 - Now"
+          >JobRad</a>
+        </dt>
+        <dd>
+          Create and maintain a design system
+        </dd>
+        <dt>
+          <a
             data-work-period="2020.10 - 2021.12"
           >Tennis-Point</a>
         </dt>
