Add mastodon link blindly via code

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         </svg>
         <span>Github</span>
       </a>
+      <a rel="me" href="https://mastodon.social/@darvi_sh">Mastodon</a>
     </div>
   </main>
 
