fix up mastodon link's structure

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </svg>
         <span>Github</span>
       </a>
-      <a rel="me" href="https://mastodon.social/@darvi_sh">Mastodon</a>
+      <a class="icon" rel="me" href="https://mastodon.social/@darvi_sh"><span>Mastodon</span></a>
     </div>
   </main>
 
